No issue: Fix more resource leaks in tests